# operating-systems

./: .gitignore
JasinskiGrzegorz/cw03/zad1/: CMakeLists.txt  batch_file  demo.c  main.c
JasinskiGrzegorz/cw03/zad2/: CMakeLists.txt  batch_file  main.c
JasinskiGrzegorz/cw04/zad2/: child
JasinskiGrzegorz/cw04/zad3/: child  main.c
Zad2/: barber  barber.c  client  client.c  client_creator  client_creator.c  common.h
cw01/zad2/: CMakeLists.txt  datagenerator.c
cw01/zad3a/: a_dll_results.txt  a_dynamic_results.txt  results.txt
cw01/zad3b/: addressbook.c  b_dynamic_o1_results.txt  b_static_o2_results.txt  b_static_o3_results.txt  bsttree.c  datagenerator.h  main.c  results.txt
cw01/zad4/: CMakeLists.txt  gdb.txt
cw02/zad1/: wyniki.txt
cw02/zad2/: CMakeLists.txt  main_open_close.c
cw02/zad3/: main.c
cw03/zad1/: demo_sleep.c  main.c  skrypt
cw03/zad2/: demo_memory.c  main.c  skrypt  t.sh
cw04/zad1/: main.c  zad1
cw04/zad2/: main.c  zad2
cw04/zad3/: child  main.c  zad2
cw05/zad1/: main.c  test.c  test_pipe.txt  zad1
cw05/zad2/: CMakeLists.txt  child.c  data  main.c  master  slave
cw06/zad1/: CMakeLists.txt  client  client.c  common.h  server  server.c
cw06/zad2/: CMakeLists.txt  Makefile  client  client.c  common.h  server  server.c
cw07/Zad1/: CMakeLists.txt  barber  barber.c  client  client.c  client_creator  client_creator.c
cw07/Zad2/: CMakeLists.txt  barber  barber.c  client  client.c  client_creator  common.h
cw07/Zad2v2/: CMakeLists.txt  barber  barber.c  client  client.c  client_creator  client_creator.c  common.h
cw07/zad1/: CMakeLists.txt  barber  barber.c  client  client.c  client_creator  client_creator.c  common.h
cw07/zad2/: CMakeLists.txt  barber  barber.c  client  client.c  client_creator  client_creator.c
cw08/Zad1/: main.c
cw08/Zad2/: CMakeLists.txt  main.c  untitled
cw08/untitled/: CMakeLists.txt  data.txt  generate_file.c  main.c  untitled
cw08/zad1/: CMakeLists.txt  main.c
cw08/zad2/: main.c  raport.raport
cw09/Zad1/: CMakeLists.txt  fifo  fifo.c  fifo.h  main.c  starving_writer  untitled
cw09/zad1/: CMakeLists.txt  fifo.c  main.h
cw10/zad1/: CMakeLists.txt  client  client.c  common.h  server  server.c
cw10/zad2/: client  client.c  common.h  server  server.c
do oddania/JasinskiGrzegorz/cw02/zad1/: CMakeLists.txt  main.c
do oddania/JasinskiGrzegorz/cw02/zad2/: main_nftw.c
do oddania/lab1/zad1/: CMakeLists.txt  list.c
do oddania/lab1/zad2/: main.c
do oddania/lab1/zad3a/: cpmain.c  list.h  main.c  main.h  makefile
do oddania/lab1/zad3b/: b_dll_o2_results.txt  b_dll_o3_results.txt  b_dynamic_o3_results.txt
do oddania/lab1/zad4/: datagenerator.h  main.c
do oddania/lab2/zad3/: CMakeLists.txt
lab0/: CMakeLists.txt  hello  hello.c
lab1/: CMakeLists.txt  Downloads.rar  addressbook.c  addressbook.h  library.c
lab1/bst/: addressBook.c  bstTree.h
lab1/list/: list  list.c  list.h
lab1/zad1/: CMakeLists.txt  addressbook.c  addressbook.h  bsttree.c  bsttree.h  list.c  list.h
lab1/zad2/: CMakeLists.txt  addressbook.h  list.c
lab1/zad3/: a_static_results.txt  b_dll_o1_results.txt  b_dynamic_o2_results.txt  b_static_o1_results.txt  bsttree.h  cpmain.c  main.c  makefile  results.txt
lab1/zad4/: list.c  main
lab2/zad1/: CMakeLists.txt  main.c
lab2/zad2/: main.c
lab2/zad3/: CMakeLists.txt  main.c
lab3/: lab3_notatki.txt
lab3/zad1/: CMakeLists.txt  demo_sleep.c  main.c  test.txt  test_buff.txt
lab3/zad2/: CMakeLists.txt  demo_memory.c  demo_time.c  main.c
lab4/zad1/: CMakeLists.txt  main.c
lab4/zad2/: CMakeLists.txt  child  child.c  main.c
lab4/zad3/: child.c  main.c
lab5/zad1/: CMakeLists.txt
lab5/zad2/: CMakeLists.txt  child.c  main.c  zad1
projekt/: simplified_docker.c
